# stock_strategy

./: .gitignore  README.md  TODO.md  config.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: symbols.csv
docs/: ai-changelog.md  api-reference.md  architecture.md  configuration.md  dependencies.md  file-summaries.md
src/: __init__.py  cli.py  config.py  fetch_stocks.py  metrics.py  utils.py
src/analysis/: __init__.py  metrics.py  utils.py
src/core/: __init__.py  config.py
src/data/: __init__.py  fetch_stocks.py
src/hello/: metrics.py  predict_returns.py  price_normalized.py
src/models/: __init__.py  trading_model.py
src/trading/: __init__.py  ibkr.py
src/utils/: __init__.py  docstring_summarizer.py
tests/: __init__.py  test_ibkr.py  test_main.py  test_models.py  test_utils.py
