[tool.poetry]
name = "stock_strategy"
version = "0.1.0"
description = "Stock analysis tool for computing technical metrics and predictions"
authors = ["alexandrec90"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
yfinance = "^0.2.0"
scipy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/alexandrec90/stock_strategy"
repository = "https://github.com/alexandrec90/stock_strategy.git"