[project]
name = "stock_strategy"
version = "0.1.0"
description = "Stock analysis tool for computing technical metrics and predictions"
authors = [{name = "Alexandre Charbonneau", email = "alexandrec89@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
keywords = ["stock", "trading", "technical-analysis", "metrics", "prediction"]
dependencies = [
    "numpy>=1.24.0",      # Numerical operations, array handling
    "pandas>=2.0.0",      # DataFrame operations for stock data
    "yfinance>=0.2.0",    # Fetch historical stock prices from Yahoo Finance
    "scipy>=1.10.0",      # Statistical functions, linear regression
    "pyyaml>=6.0",        # Config file parsing (config.yaml)
    "scikit-learn>=1.3.0", # Machine learning algorithms for trading models
]
# AI: When adding dependencies, also update:
# - docs/dependencies.md (with purpose and justification)
# - README.md installation section (if user-facing)

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",      # Testing framework
    "pytest-cov>=4.0.0",  # Test coverage reporting
    "black>=23.0.0",      # Code formatting
    "ruff>=0.1.0",        # Fast linting and import sorting
]

[project.urls]
Homepage = "https://github.com/alexandrec90/stock_strategy"
Repository = "https://github.com/alexandrec90/stock_strategy.git"
Documentation = "https://github.com/alexandrec90/stock_strategy/tree/main/docs"

[project.scripts]
stock-strategy = "src.cli:main"

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# AI Code Standards Enforcement
[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "D"]  # E=errors, F=pyflakes, I=imports, N=naming, D=docstrings
ignore = ["D100", "D104"]  # Allow missing docstrings in __init__.py and packages

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"